[gd_scene load_steps=41 format=3 uid="uid://cimskwpxdbycl"]

[ext_resource type="Texture2D" uid="uid://cx4bfy8vcro1u" path="res://assets/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Spritesheet.png" id="1_dvuat"]
[ext_resource type="Script" path="res://player.gd" id="1_j48o0"]
[ext_resource type="Texture2D" uid="uid://ckkcmkpimibcm" path="res://assets/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Actions.png" id="3_3otog"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nk6u5"]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id="Animation_3dpys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d0edt"]
resource_name = "axe_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_3p2cc"]
resource_name = "axe_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_yim6r"]
resource_name = "axe_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_ovgl4"]
resource_name = "axe_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_lvm5n"]
resource_name = "idle_down"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ekx1p"]
resource_name = "idle_left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_dp45a"]
resource_name = "idle_right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_vbsjq"]
resource_name = "idle_up"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_preoj"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_nkeyb"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 8]
}

[sub_resource type="Animation" id="Animation_g7d6y"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 12]
}

[sub_resource type="Animation" id="Animation_b3oyk"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4x52j"]
_data = {
"RESET": SubResource("Animation_3dpys"),
"axe_down": SubResource("Animation_d0edt"),
"axe_left": SubResource("Animation_3p2cc"),
"axe_right": SubResource("Animation_yim6r"),
"axe_up": SubResource("Animation_ovgl4"),
"idle_down": SubResource("Animation_lvm5n"),
"idle_left": SubResource("Animation_ekx1p"),
"idle_right": SubResource("Animation_dp45a"),
"idle_up": SubResource("Animation_vbsjq"),
"walk_down": SubResource("Animation_preoj"),
"walk_left": SubResource("Animation_nkeyb"),
"walk_right": SubResource("Animation_g7d6y"),
"walk_up": SubResource("Animation_b3oyk")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6lk7c"]
animation = &"axe_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ajccl"]
animation = &"axe_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7cft"]
animation = &"axe_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3sddl"]
animation = &"axe_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_slk1u"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6lk7c")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ajccl")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_v7cft")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_3sddl")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nc66m"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6wljh"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yauuw"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h1ope"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_187da"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nc66m")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_6wljh")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yauuw")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_h1ope")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1qpik"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ra46y"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e2s21"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wbegx"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_sx3x6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1qpik")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ra46y")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_e2s21")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_wbegx")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wohcp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fak7o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_18vhw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_60kx1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ehp1"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_u8ea1"]
states/Axe/node = SubResource("AnimationNodeBlendSpace2D_slk1u")
states/Axe/position = Vector2(396, 218)
states/End/position = Vector2(767, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_187da")
states/Idle/position = Vector2(396, 100)
states/Start/position = Vector2(218, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_sx3x6")
states/Walk/position = Vector2(570, 100)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_wohcp"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_fak7o"), "Axe", "Idle", SubResource("AnimationNodeStateMachineTransition_18vhw"), "Idle", "Axe", SubResource("AnimationNodeStateMachineTransition_60kx1"), "Walk", "Axe", SubResource("AnimationNodeStateMachineTransition_1ehp1")]
graph_offset = Vector2(-347, 48)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_di8cp"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_j48o0")
metadata/_edit_group_ = true

[node name="MainSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_dvuat")
hframes = 4
vframes = 4

[node name="ActionSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
texture = ExtResource("3_3otog")
hframes = 2
vframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nk6u5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4x52j")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_u8ea1")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_di8cp")
parameters/Axe/blend_position = Vector2(0, 0)
parameters/Idle/blend_position = Vector2(-0.00105822, 0.929329)
parameters/Walk/blend_position = Vector2(0.00317466, 0.252918)

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
